Fix STS-3610: provide a global preference to set default JVM arguments for grails commands.